  - bugfix: debtors counting in UserStats() for MySQL (alec)
  - icon invoice_pay.gif renamed to pay.gif (alec)
  - changed icon for standing payments accounting (alec)
  - BTS#0000360: ticket adding in customer context (alec)
  - bugfix: error handling while ticket addition (alec) 
  - bugfix: going to backup view by clicking on record on backups list (alec)

version 1.6.0rc3 Thor (23/05/2005):

  - lms-notify: added option 'mailcharset' with default value 'UTF-8' (alec)
  - lms-notify: don't sends mail to deleted customers (alec)
  - lms-notify: don't stops on unknown/wrong recipient address (alec)
  - file sample/mailtemplate.txt converted to UTF-8 (alec)
  - language fixes in documentation (kondi)
  - bugfix: tickets searching by requestor name (alec)
  - bugfix: in quicksearch header() replaced by $SESSION->redirect() (alec)
  - bugfix: error with null netdev value while adding new node (alec)
  - BTS#0000353: in _smarty_function_sum() added checking if each iterated 
    row is an array (alec)
  - fixed discount displaying in customer assignments box (chilek)
  - language fixes in UI (kondi)
  - lms-makeiptables: added public IP (SNAT) support (daro/alec)
  - bugfix: nodes and customers searching while register_globals = On (alec)

version 1.6.0rc2 Thor (18/05/2005):

  - updated upgrade scripts for 1.2 version, deleted not supported upgrade
    scripts for 1.0 version of LMS (alec)
  - bugfix: ipaddr_pub in NetworkShift() function (alec)
  - lms/pinger: added online status activation of host where runs daemon (alec)
  - Customer Search Results paging (alec)
  - fixed smtp_auth_type default behaviour - use best method (alec)
  - function SendMail() returns warnings from PEAR (alec)
  - bugfix: dummy nodes on Nodes Search Results list (alec)
  - lmsd/system: added option 'sql', run shell comand if is non-empty (alec)
  - in nodes and customers searching functions added workaround for
    postgresql ILIKE problem with national characters in UTF-8 (alec)